# old-charcha

./: .gitignore  CMakeLists.txt  Growl Registration Ticket.growlRegDict  INSTALL  README.md  Readme.md  TODO  charcha-main.cpp  main.c  main.cpp  nc-main.c  qt-main.cpp  ui-helper.cpp
Charcha/: AppController.h  AppController.m  Charcha-Info.plist  Charcha.entitlements  CharchaAppDelegate.h  CharchaAppDelegate.m  main.m
Charcha.xcodeproj/: project.pbxproj
Charcha.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Charcha/Base.lproj/: MainMenu.xib
Charcha/Charcha.xcdatamodeld/: .xccurrentversion
Charcha/Classes/: AppController.h  AppController.m  MainWindow.h  MainWindow.m  setupAssistantController.h  setupAssistantController.m  setupAssistantController.xib
Charcha/en.lproj/: Credits.rtf
CharchaTests/: CharchaTests-Info.plist  CharchaTests.m
con-ui-lib/: CMakeLists.txt
core-lib/: CMakeLists.txt  charcha.c  charcha.h  conf-account.c  conf-account.h  conf-common.c  conf-common.h  conf.c  conf.h  cstring.c  cstring.h  htable.c  htable.h  irc-core.c  net.h  net_ssl.c  net_ssl.h  net_tcp.c  net_tcp.h  qt-gui.h  utf8.c  utf8.h  util.c  util.h
qt-ui-lib/: CMakeLists.txt  mainwindow.h  ui.cpp
tests/: CMakeLists.txt
ui-lib/: CMakeLists.txt  mainwindow.cpp
